--- a/src/Component/pages/Card/card.css
+++ b/src/Component/pages/Card/card.css
@@ -23,7 +23,7 @@ margin: 0 0 10px 0;}
 }
 .item1{
           flex-grow: 1;
-          border-right: 1px solid ;
+          border-right: 1px solid rgb(179, 93, 253) ;
           
 }
 .list-item p {
@@ -35,7 +35,7 @@ margin: 0 0 10px 0;}
 
 .item2{
           flex-grow: 2;
-          border-right: 1px solid ;
+          border-right: 1px solid rgb(179, 93, 253) ;
           padding: 0 0 0 2px;
 }
 .item3{
