--- a/src/Component/pages/Property/pro.css
+++ b/src/Component/pages/Property/pro.css
@@ -1,10 +1,12 @@
 .prop{
           margin: 45px;
 }
+
 .Flat-body{
           /* Top right down left */
+          background-color: rgb(199, 240, 230);
           margin: 2% 10% 2%  20%;
-          
+          padding: 15px;
           border: 1px solid;
           
 }
