--- a/src/Component/Footer/footer.css
+++ b/src/Component/Footer/footer.css
@@ -2,16 +2,12 @@
     text-align: center;
     opacity: 0.7;
     background-color: rgb(24, 255, 178);
-    padding: 3px;
-}
-
-div.footer{
-    position: static;
+    position: fixed;
+    left: 0;
+    bottom: 0;
     width: 100%;
-    bottom: 2px;
+    color: white;
 }
-
-    
     .social-icon{
         margin: 2px 5px 1px 2px;
     }
