--- a/src/Component/pages/Contact/contact.css
+++ b/src/Component/pages/Contact/contact.css
@@ -31,8 +31,8 @@
           .middle-container2{
          
                     display: flex;
-                    background-color: #58ACFA;
-                    color: rgb(14, 164, 14);
+                    background-color: #50a8df;
+                    color: rgb(179, 57, 190);
                     margin: 45px ;
                     padding: 1px 2px 13px 4px;
                     border-radius: 20px;
@@ -43,18 +43,30 @@
           .contract-details{
                     /* left: 6px; */
                     bottom: 30px;
-                    right: 45px;
                     padding: 5px 10px 20px 45px;
+          }
+          .contract-details p a:hover{
+                    color: rgb(255, 81, 0);
+
+          }
+          .contract-details p a{
+                    color: rgb(255, 0, 217);
+
           }
           .details{
                     padding: 5px 15px 0 32px;
           }
-          .details p {
-                    padding-left: 15px;
-                    
-          }
+          
           .image-div{
                     padding-top: 5px;
+          }
+          .name{
+                    font-size: 42px;
+                    font-weight: I;
+
+          }
+          .pro-name{
+                    font-size: 42px;
           }
           
 }
